--- a/mobile.css
+++ b/mobile.css
@@ -42,7 +42,7 @@
         border-radius: 30%;
         text-align: center;
         border: 2px solid cornsilk;
-        color: cornsilk;
+        color: darkslategray;
         background-color: cornsilk;
         opacity: 0.8;
         font-weight: bolder;
